Fix cropping issue

--- a/frontend/src/components/Home/ServiceItem.scss
+++ b/frontend/src/components/Home/ServiceItem.scss
@@ -32,6 +32,7 @@
   min-width: 30%;
   width: 120px;
   height: 120px;
+  // position: relative;
   overflow: hidden;
   border-radius: 50%;
   box-sizing: border-box;
@@ -40,7 +41,7 @@
 }
 
 .service-item-image {
-  width: auto;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
