--- a/frontend/src/components/Profile/Profile.scss
+++ b/frontend/src/components/Profile/Profile.scss
@@ -26,9 +26,10 @@
 }
 
 .user-image {
-    width: auto;
+    width: 100%;
     height: 100%;
-    margin-left: -50px;
+    object-fit: cover;
+    // margin-left: -50px;
 }
 
 .link {
